--- a/auth-service/config-map.yaml
+++ b/auth-service/config-map.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: geo-service-config
+  name: auth-service-config
   namespace: default
 data:
-  port: 50004
+  port: "50051"
