--- a/auth-service/deployment.yaml
+++ b/auth-service/deployment.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: geo-service
+  name: auth-service
   labels:
-    app: geo-service
+    app: auth-service
     tier: backend
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: geo-service
+      app: auth-service
       tier: backend
   template:
     metadata:
       labels:
-        app: geo-service
+        app: auth-service
         tier: backend
     spec:
       containers:
-        - name: geo-service
-          image: "geo-service:1.0.0"
+        - name: auth-service
+          image: "auth-service:1.0.0"
           ports:
-            - containerPort: 50004
+            - containerPort: 50051
           env:
             - name: port
               valueFrom:
                 configMapKeyRef:
-                  name: geo-service-config
+                  name: auth-service-config
                   key: port
